# stm32-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: STM32Toolchain.cmake
cmake/Platform/: AddSources.cmake  CompileFlags.cmake  FirmwareTargetGenerator.cmake  LinkFlags.cmake  STM32.cmake
example/: CMakeLists.txt  app.cpp  gpio.c  gpio.h
stm32cube/boards/icu_v03/: main.c
stm32cube/boards/nucleo_f411re/: main.c
stm32cube/common/include/: simple_assert.h
stm32cube/stm32cubef4/hal_drivers/: CMakeLists.txt
stm32cube/stm32cubef4/interrupt_handlers/: stm32f411re_it.c
